trunk/Source/include/OpenGL1x.hpp


extern "C" void __stdcall glEdgeFlag(System::ByteBool flag);

extern "C" void __stdcall glEdgeFlagPointer(int stride, void * data);

extern "C" void __stdcall glEdgeFlagv(Opengltokens::PGLboolean flag);

extern "C" void __stdcall glEnableClientState(unsigned aarray);

extern "C" void __stdcall glEnd(void);

extern "C" void __stdcall glEndList(void);

extern "C" void __stdcall glEvalCoord1d(double u);

extern "C" void __stdcall glEvalCoord1dv(System::PDouble u);

extern "C" void __stdcall glEvalCoord1f(float u);

extern "C" void __stdcall glEvalCoord1fv(System::PSingle u);

extern "C" void __stdcall glEvalCoord2d(double u, double v);

extern "C" void __stdcall glEvalCoord2dv(System::PDouble u);

extern "C" void __stdcall glEvalCoord2f(float u, float v);

extern "C" void __stdcall glEvalCoord2fv(System::PSingle u);

extern "C" void __stdcall glEvalMesh1(unsigned mode, int i1, int i2);

extern "C" void __stdcall glEvalMesh2(unsigned mode, int i1, int i2, int j1, int j2);

extern "C" void __stdcall glEvalPoint1(int i);

extern "C" void __stdcall glEvalPoint2(int i, int j);

extern "C" void __stdcall glFeedbackBuffer(int size, unsigned atype, System::PSingle buffer);

extern "C" void __stdcall glFogf(unsigned pname, float param);

extern "C" void __stdcall glFogfv(unsigned pname, System::PSingle params);

extern "C" void __stdcall glFogi(unsigned pname, int param);

extern "C" void __stdcall glFogiv(unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glFrustum(double left, double right, double bottom, double top, double zNear, double zFar);

extern "C" unsigned __stdcall glGenLists(int range);

extern "C" void __stdcall glGetClipPlane(unsigned plane, System::PDouble equation);

extern "C" void __stdcall glGetLightfv(unsigned light, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetLightiv(unsigned light, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glGetMapdv(unsigned target, unsigned query, System::PDouble v);

extern "C" void __stdcall glGetMapfv(unsigned target, unsigned query, System::PSingle v);

extern "C" void __stdcall glGetMapiv(unsigned target, unsigned query, Opengltokens::PGLint v);

extern "C" void __stdcall glGetMaterialfv(unsigned face, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetMaterialiv(unsigned face, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glGetPixelMapfv(unsigned map, System::PSingle values);

extern "C" void __stdcall glGetPixelMapuiv(unsigned map, Opengltokens::PGLuint values);

extern "C" void __stdcall glGetPixelMapusv(unsigned map, System::PWord values);

extern "C" void __stdcall glGetPolygonStipple(System::PByte mask);

extern "C" void __stdcall glGetTexEnvfv(unsigned target, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetTexEnviv(unsigned target, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glGetTexGendv(unsigned coord, unsigned pname, System::PDouble params);

extern "C" void __stdcall glGetTexGenfv(unsigned coord, unsigned pname, System::PSingle params);

extern "C" void __stdcall glGetTexGeniv(unsigned coord, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glIndexMask(unsigned mask);

extern "C" void __stdcall glIndexPointer(unsigned atype, int stride, void * data);

extern "C" void __stdcall glIndexd(double c);

extern "C" void __stdcall glIndexdv(System::PDouble c);

extern "C" void __stdcall glIndexf(float c);

extern "C" void __stdcall glIndexfv(System::PSingle c);

extern "C" void __stdcall glIndexi(int c);

extern "C" void __stdcall glIndexiv(Opengltokens::PGLint c);

extern "C" void __stdcall glIndexs(short c);

extern "C" void __stdcall glIndexsv(Opengltokens::PGLshort c);

extern "C" void __stdcall glIndexub(System::Byte c);

extern "C" void __stdcall glIndexubv(System::PByte c);

extern "C" void __stdcall glInitNames(void);

extern "C" void __stdcall glInterleavedArrays(unsigned format, int stride, void * data);

extern "C" System::ByteBool __stdcall glIsList(unsigned list);

extern "C" void __stdcall glLightModelf(unsigned pname, float param);

extern "C" void __stdcall glLightModelfv(unsigned pname, System::PSingle params);

extern "C" void __stdcall glLightModeli(unsigned pname, int param);

extern "C" void __stdcall glLightModeliv(unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glLightf(unsigned light, unsigned pname, float param);

extern "C" void __stdcall glLightfv(unsigned light, unsigned pname, System::PSingle params);

extern "C" void __stdcall glLighti(unsigned light, unsigned pname, int param);

extern "C" void __stdcall glLightiv(unsigned light, unsigned pname, Opengltokens::PGLint params);

extern "C" void __stdcall glLineStipple(int factor, System::Word pattern);

extern "C" void __stdcall glListBase(unsigned base);

extern "C" void __stdcall glLoadIdentity(void);

extern "C" void __stdcall glLoadMatrixd(System::PDouble m);

extern "C" void __stdcall glLoadMatrixf(System::PSingle m);

extern "C" void __stdcall glLoadName(unsigned name);